Java Marine API - RELEASE NOTES
Version @VERSION@ (b@BUILD_ID@)
<http://ktuukkan.github.io/marine-api/>

This is a pre-alpha release, major API changes may be introduced in future
versions. Released on @RELEASE_DATE@.

NEW FEATURES

 * Support for RSA sentences; rudder angle in degrees.

 * Support for XTE sentences; measured cross-track error.

 * Support for VDR sentences; set and drift.

 * Support for TTM sentences; tracked target message.

CHANGES

 * TalkerId; added ids 'GL' and 'GN' for GLONASS sentences.

 * SentenceReader; UDP packet may now contain multiple lines/sentences.

 * SentenceParser; setFieldCount() now preserves existing/remaining values.

 * RMCParser, VTGParser; if optional FAA mode was omitted, sentence field count
   is now adjusted before setting the mode.

KNOWN ISSUES

 * Position.distanceTo() may produce inaccurate results.

 * All AIS sentences may not be supported as TalkerId has only AI, AB and BS.

ACKNOWLEDGEMENTS

 * József Lázár helped resolving UDP issues and wrote most of RSA parser.

 * TTM parser written by Johan Bergkvist